# m3vcftools

./: CMakeLists.txt  ChangeLog  Makefile.inc  README.md
src/: Analyse.cpp  Analyse.h  Compress.cpp  Concat.cpp  Convert.cpp  HaplotypeSet.cpp  HaplotypeSet.h  Main.cpp  Makefile  Makefile.save  ORIGINAL  Tokenize.cpp  Tokenize.h  Unique.cpp  Unique.h  m3vcfBlock.cpp  m3vcfBlock.h  m3vcfBlockHeader.cpp  m3vcfBlockHeader.h  m3vcfFile.cpp  m3vcfFile.h  m3vcfFileReader.cpp  m3vcfFileReader.h  m3vcfFileWriter.cpp  m3vcfFileWriter.h  m3vcfHeader.cpp  m3vcfHeader.h  m3vcfRecord.cpp  m3vcfRecord.h
test/: .pversion  FILE  refPanel.m3vcf
